--- a/golang/catalog/catalog_server/config.json
+++ b/golang/catalog/catalog_server/config.json
@@ -12,19 +12,19 @@
   "KeyFile": "",
   "Keywords": [],
   "Name": "catalog_server",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/catalog/catalog_server/catalog_server.exe",
+  "Path": "/home/dave/go/src/github.com/globulario/Globular/services//catalog_server/0.0.1/aed4f9f6-77d6-492b-b859-d118d4ace559/catalog_server.exe",
   "Permissions": null,
   "Port": 10041,
-  "Process": 19580,
+  "Process": -1,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/",
   "Protocol": "grpc",
   "Proxy": 10024,
-  "ProxyProcess": 19312,
+  "ProxyProcess": -1,
   "PublisherId": "",
   "Repositories": [],
   "Services": null,
-  "State": "running",
+  "State": "stopped",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/catalog/catalog_server/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/catalog/catalog_server/config.json"
 }
