--- a/golang/event/event_server/config.json
+++ b/golang/event/event_server/config.json
@@ -6,24 +6,24 @@
   "Description": "",
   "Discoveries": [],
   "Domain": "localhost",
-  "Id": "6d540754-11bf-45e0-aaf5-d72da845ff71",
+  "Id": "e208ca54-031d-48cd-8a97-83cd0a8e0016",
   "KeepAlive": false,
   "KeepUpToDate": false,
   "KeyFile": "",
   "Keywords": [],
   "Name": "event.EventService",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/event/event_server/event_server.exe",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/event/event_server/event_server",
   "Permissions": [],
-  "Port": 10043,
-  "Process": 13964,
-  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/event.proto",
+  "Port": 10042,
+  "Process": 123622,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/event.proto",
   "Protocol": "grpc",
-  "Proxy": 10033,
-  "ProxyProcess": 21264,
+  "Proxy": 10026,
+  "ProxyProcess": 123623,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/event/event_server/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/event/event_server/config.json"
 }
