--- a/golang/mail/mail_server/config.json
+++ b/golang/mail/mail_server/config.json
@@ -26,21 +26,21 @@
   "Keywords": [],
   "Name": "mail.MailService",
   "Password": "adminadmin",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/mail/mail_server/mail_server.exe",
+  "Path": "/home/dave/go/src/github.com/globulario/Globular/services/globulario/mail.MailService/0.0.1/87f1acd6-db92-4024-a2a3-249e5c5e7d5c/mail_server.exe",
   "Permissions": [],
   "Port": 10039,
-  "Process": 11692,
+  "Process": -1,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/mail.proto",
   "Protocol": "grpc",
   "Proxy": 10036,
-  "ProxyProcess": 9180,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "SMTPS_Port": 465,
   "SMTP_ALT_Port": 587,
   "SMTP_Port": 25,
-  "State": "running",
+  "State": "stopped",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/mail/mail_server/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/mail/mail_server/config.json"
 }
