--- a/golang/search/search_server/config.json
+++ b/golang/search/search_server/config.json
@@ -12,19 +12,19 @@
   "KeyFile": "",
   "Keywords": [],
   "Name": "search.SearchService",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/search/search_server/search_server.exe",
+  "Path": "/home/dave/go/src/github.com/globulario/Globular/services/globulario/search.SearchService/0.0.1/c9c9cd4a-a5a2-4494-980e-3e425387c9e2/search_server.exe",
   "Permissions": [],
   "Port": 10021,
-  "Process": 21280,
+  "Process": -1,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/search.proto",
   "Protocol": "grpc",
   "Proxy": 10025,
-  "ProxyProcess": 13524,
+  "ProxyProcess": -1,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
-  "State": "running",
+  "State": "stopped",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/search/search_server/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/search/search_server/config.json"
 }
