--- a/golang/persistence/persistence_server/config.json
+++ b/golang/persistence/persistence_server/config.json
@@ -7,24 +7,24 @@
   "Description": "",
   "Discoveries": [],
   "Domain": "localhost",
-  "Id": "13fe664e-a64c-4465-8977-22fb7a22dec6",
+  "Id": "ad7011df-8730-4efe-9634-88b6584fac93",
   "KeepAlive": false,
   "KeepUpToDate": false,
   "KeyFile": "",
   "Keywords": [],
   "Name": "persistence.PersistenceService",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server.exe",
+  "Path": "/home/dave/go/src/github.com/globulario/services/golang/persistence/persistence_server/persistence_server",
   "Permissions": [],
-  "Port": 10034,
-  "Process": 4248,
-  "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/persistence.proto",
+  "Port": 10020,
+  "Process": 123638,
+  "Proto": "/home/dave/go/src/github.com/globulario/services/proto/persistence.proto",
   "Protocol": "grpc",
-  "Proxy": 10042,
-  "ProxyProcess": 8972,
+  "Proxy": 10035,
+  "ProxyProcess": 123639,
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/persistence/persistence_server/config.json"
 }
