--- a/golang/ldap/ldap_server/config.json
+++ b/golang/ldap/ldap_server/config.json
@@ -21,18 +21,18 @@
   "KeyFile": "",
   "Keywords": [],
   "Name": "ldap.LdapService",
-  "Path": "/home/dave/go/src/github.com/globulario/Globular/services/globulario/ldap.LdapService/0.0.1/d9213adc-4c37-4ad1-a315-762c32c03468/ldap_server.exe",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/ldap/ldap_server/ldap_server.exe",
   "Permissions": [],
   "Port": 10031,
-  "Process": -1,
+  "Process": 14648,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/ldap.proto",
   "Protocol": "grpc",
-  "Proxy": 10040,
-  "ProxyProcess": -1,
+  "Proxy": 10025,
+  "ProxyProcess": 9536,
   "PublisherId": "globulario",
   "Repositories": [],
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/ldap/ldap_server/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/ldap/ldap_server/config.json"
 }
