--- a/golang/search/search_server/config.json
+++ b/golang/search/search_server/config.json
@@ -12,19 +12,19 @@
   "KeyFile": "",
   "Keywords": [],
   "Name": "search.SearchService",
-  "Path": "/home/dave/go/src/github.com/globulario/Globular/services/globulario/search.SearchService/0.0.1/c9c9cd4a-a5a2-4494-980e-3e425387c9e2/search_server.exe",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/search/search_server/search_server.exe",
   "Permissions": [],
-  "Port": 10021,
-  "Process": -1,
+  "Port": 10023,
+  "Process": 22456,
   "Proto": "C:/Users/mm006819/go/src/github.com/globulario/services/proto/search.proto",
   "Protocol": "grpc",
-  "Proxy": 10025,
-  "ProxyProcess": -1,
+  "Proxy": 10040,
+  "ProxyProcess": 21920,
   "PublisherId": "globulario",
   "Repositories": [],
   "Root": "",
-  "State": "stopped",
+  "State": "running",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/search/search_server/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/search/search_server/config.json"
 }
