--- a/golang/plc/plc_server_siemens/config.json
+++ b/golang/plc/plc_server_siemens/config.json
@@ -13,18 +13,18 @@
   "KeyFile": "",
   "Keywords": [],
   "Name": "plc.PlcService",
-  "Path": "/home/dave/go/src/github.com/globulario/services/golang/plc/plc_server_siemens/plc_server_siemens",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/Globular/services//plc.PlcService/0.0.1/0395ba48-e04a-42f9-8216-f94053399c79/plc_server_siemens",
   "Permissions": [],
-  "Port": 10028,
-  "Process": 123693,
+  "Port": 10027,
+  "Process": -1,
   "Proto": "/home/dave/go/src/github.com/globulario/services/proto/plc.proto",
   "Protocol": "grpc",
-  "Proxy": 10043,
-  "ProxyProcess": 123694,
+  "Proxy": 10022,
+  "ProxyProcess": -1,
   "PublisherId": "",
   "Repositories": [],
-  "State": "running",
+  "State": "stopped",
   "TLS": false,
   "Version": "0.0.1",
-  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/plc/plc_server_siemens/config.json"
+  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/plc/plc_server_siemens/config.json"
 }
