add c# services and modifify admin

--- a/golang/plc/plc_server_ab/config.json
+++ b/golang/plc/plc_server_ab/config.json
@@ -13,7 +13,7 @@
   "KeyFile": "",
   "Keywords": [],
   "Name": "plc.PlcService",
-  "Path": "C:\\Users\\mm006819\\go\\src\\github.com\\globulario\\Globular/services/monl580/plc.PlcService/0.0.1/6f28c173-30ce-478b-8e3b-ff68ba2cc5d7/plc_server_ab",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/Globular/services/monl580/plc.PlcService/0.0.1/6f28c173-30ce-478b-8e3b-ff68ba2cc5d7/plc_server_ab",
   "Permissions": [],
   "Port": 10034,
   "Process": -1,
