--- a/golang/plc/plc_server_siemens/config.json
+++ b/golang/plc/plc_server_siemens/config.json
@@ -13,7 +13,7 @@
   "KeyFile": "",
   "Keywords": [],
   "Name": "plc.PlcService",
-  "Path": "C:\\Users\\mm006819\\go\\src\\github.com\\globulario\\Globular/services//plc.PlcService/0.0.1/0395ba48-e04a-42f9-8216-f94053399c79/plc_server_siemens",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/Globular/services//plc.PlcService/0.0.1/0395ba48-e04a-42f9-8216-f94053399c79/plc_server_siemens",
   "Permissions": [],
   "Port": 10027,
   "Process": -1,
