--- a/golang/plc_link/plc_link_server/config.json
+++ b/golang/plc_link/plc_link_server/config.json
@@ -13,7 +13,7 @@
   "Keywords": [],
   "Links": {},
   "Name": "plc_link.PlcLinkService",
-  "Path": "C:\\Users\\mm006819\\go\\src\\github.com\\globulario\\Globular/services/globulario/plc_link.PlcLinkService/0.0.1/4bf334ff-0cb7-4fbe-9473-c5684e1ea842/plc_link_server",
+  "Path": "C:/Users/mm006819/go/src/github.com/globulario/Globular/services/globulario/plc_link.PlcLinkService/0.0.1/4bf334ff-0cb7-4fbe-9473-c5684e1ea842/plc_link_server",
   "Permissions": [],
   "Port": 10029,
   "Process": -1,
