--- a/csharp/rbac/GlobularRbacClient/GlobularRbacClient.csproj
+++ b/csharp/rbac/GlobularRbacClient/GlobularRbacClient.csproj
@@ -3,5 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\GlobularClient\GlobularClient.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.14.0" />
+    <PackageReference Include="Grpc" Version="2.34.0" />
+  </ItemGroup>
 </Project>
