fix TLS with csharp again 0.0.0.0 was not use as domain

--- a/csharp/GlobularServer/GlobularServer.csproj
+++ b/csharp/GlobularServer/GlobularServer.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\resource\GlobularResourceClient\GlobularResourceClient.csproj" />
-    
+    <ProjectReference Include="..\rbac\GlobularRbacClient\GlobularRbacClient.csproj" />
+    <ProjectReference Include="..\lb\GlobularLoadBalancingClient\GlobularLoadBalancingClient.csproj" />
+    <ProjectReference Include="..\log\GlobularLogClient\GlobularLogClient.csproj" />
   </ItemGroup>
 </Project>
