--- a/golang/plc/plc_server_ab/config.json
+++ b/golang/plc/plc_server_ab/config.json
@@ -1,19 +1,19 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/home/dave/go/src/github.com/globulario/Globular/config/tls/ca.crt",
+  "CertFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.crt",
   "Connections": [],
   "Description": "",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "globular.live",
   "Id": "6f28c173-30ce-478b-8e3b-ff68ba2cc5d7",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.pem",
   "Keywords": [],
   "Name": "plc.PlcService",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/Globular/services/monl580/plc.PlcService/0.0.1/6f28c173-30ce-478b-8e3b-ff68ba2cc5d7/plc_server_ab",
+  "Path": "/home/dave/go/src/github.com/globulario/Globular/services/monl580/plc.PlcService/0.0.1/6f28c173-30ce-478b-8e3b-ff68ba2cc5d7/plc_server_ab",
   "Permissions": [],
   "Port": 10034,
   "Process": -1,
@@ -24,7 +24,7 @@
   "PublisherId": "monl580",
   "Repositories": [],
   "State": "stopped",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/plc/plc_server_ab/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/plc/plc_server_ab/config.json"
 }
