--- a/golang/plc/plc_server_siemens/config.json
+++ b/golang/plc/plc_server_siemens/config.json
@@ -1,19 +1,19 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/home/dave/go/src/github.com/globulario/Globular/config/tls/ca.crt",
+  "CertFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.crt",
   "Connections": [],
   "Description": "",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "globular.live",
   "Id": "0395ba48-e04a-42f9-8216-f94053399c79",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.pem",
   "Keywords": [],
   "Name": "plc.PlcService",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/Globular/services//plc.PlcService/0.0.1/0395ba48-e04a-42f9-8216-f94053399c79/plc_server_siemens",
+  "Path": "/home/dave/go/src/github.com/globulario/Globular/services//plc.PlcService/0.0.1/0395ba48-e04a-42f9-8216-f94053399c79/plc_server_siemens",
   "Permissions": [],
   "Port": 10027,
   "Process": -1,
@@ -24,7 +24,7 @@
   "PublisherId": "",
   "Repositories": [],
   "State": "stopped",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/plc/plc_server_siemens/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/plc/plc_server_siemens/config.json"
 }
