--- a/golang/plc_link/plc_link_server/config.json
+++ b/golang/plc_link/plc_link_server/config.json
@@ -1,19 +1,19 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "",
-  "CertFile": "",
+  "CertAuthorityTrust": "/home/dave/go/src/github.com/globulario/Globular/config/tls/ca.crt",
+  "CertFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.crt",
   "Description": "",
   "Discoveries": [],
-  "Domain": "localhost",
+  "Domain": "globular.live",
   "Id": "4bf334ff-0cb7-4fbe-9473-c5684e1ea842",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "",
+  "KeyFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.pem",
   "Keywords": [],
   "Links": {},
   "Name": "plc_link.PlcLinkService",
-  "Path": "C:/Users/mm006819/go/src/github.com/globulario/Globular/services/globulario/plc_link.PlcLinkService/0.0.1/4bf334ff-0cb7-4fbe-9473-c5684e1ea842/plc_link_server",
+  "Path": "/home/dave/go/src/github.com/globulario/Globular/services/globulario/plc_link.PlcLinkService/0.0.1/4bf334ff-0cb7-4fbe-9473-c5684e1ea842/plc_link_server",
   "Permissions": [],
   "Port": 10029,
   "Process": -1,
@@ -24,7 +24,7 @@
   "PublisherId": "globulario",
   "Repositories": [],
   "State": "stopped",
-  "TLS": false,
+  "TLS": true,
   "Version": "0.0.1",
-  "configPath": "C:/Users/mm006819/go/src/github.com/globulario/services/golang/plc_link/plc_link_server/config.json"
+  "configPath": "/home/dave/go/src/github.com/globulario/services/golang/plc_link/plc_link_server/config.json"
 }
