--- a/golang/plc/plc_server_ab/config.json
+++ b/golang/plc/plc_server_ab/config.json
@@ -1,16 +1,16 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/go/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Connections": [],
   "Description": "",
   "Discoveries": [],
-  "Domain": "globular.live",
+  "Domain": "localhost",
   "Id": "6f28c173-30ce-478b-8e3b-ff68ba2cc5d7",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "plc.PlcService",
   "Path": "/home/dave/go/src/github.com/globulario/Globular/services/monl580/plc.PlcService/0.0.1/6f28c173-30ce-478b-8e3b-ff68ba2cc5d7/plc_server_ab",
@@ -24,7 +24,7 @@
   "PublisherId": "monl580",
   "Repositories": [],
   "State": "stopped",
-  "TLS": true,
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/plc/plc_server_ab/config.json"
 }
