--- a/golang/plc/plc_server_siemens/config.json
+++ b/golang/plc/plc_server_siemens/config.json
@@ -1,16 +1,16 @@
 {
   "AllowAllOrigins": true,
   "AllowedOrigins": "",
-  "CertAuthorityTrust": "/home/dave/go/src/github.com/globulario/Globular/config/tls/ca.crt",
-  "CertFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.crt",
+  "CertAuthorityTrust": "",
+  "CertFile": "",
   "Connections": [],
   "Description": "",
   "Discoveries": [],
-  "Domain": "globular.live",
+  "Domain": "localhost",
   "Id": "0395ba48-e04a-42f9-8216-f94053399c79",
   "KeepAlive": false,
   "KeepUpToDate": false,
-  "KeyFile": "/home/dave/go/src/github.com/globulario/Globular/config/tls/server.pem",
+  "KeyFile": "",
   "Keywords": [],
   "Name": "plc.PlcService",
   "Path": "/home/dave/go/src/github.com/globulario/Globular/services//plc.PlcService/0.0.1/0395ba48-e04a-42f9-8216-f94053399c79/plc_server_siemens",
@@ -24,7 +24,7 @@
   "PublisherId": "",
   "Repositories": [],
   "State": "stopped",
-  "TLS": true,
+  "TLS": false,
   "Version": "0.0.1",
   "configPath": "/home/dave/go/src/github.com/globulario/services/golang/plc/plc_server_siemens/config.json"
 }
