--- a/csharp/echo/GlobularEchoServer/GlobularEchoServer.csproj
+++ b/csharp/echo/GlobularEchoServer/GlobularEchoServer.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Google.Protobuf" Version="3.14.0" />
     <PackageReference Include="Grpc" Version="2.34.0" />
     <PackageReference Include="Grpc.Core" Version="2.34.0" />
+    <PackageReference Include="Grpc.Reflection" Version="2.34.0" />
     <PackageReference Include="Grpc.Tools" Version="2.34.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
