--- a/csharp/GlobularServer/GlobularServer.csproj
+++ b/csharp/GlobularServer/GlobularServer.csproj
@@ -16,5 +16,6 @@
     <ProjectReference Include="..\rbac\GlobularRbacClient\GlobularRbacClient.csproj" />
     <ProjectReference Include="..\lb\GlobularLoadBalancingClient\GlobularLoadBalancingClient.csproj" />
     <ProjectReference Include="..\log\GlobularLogClient\GlobularLogClient.csproj" />
+    <ProjectReference Include="..\event\GlobularEventClient\GlobularEventClient.csproj" />
   </ItemGroup>
 </Project>
