--- a/csharp/echo/GlobularEchoServer/GlobularEchoServer.csproj
+++ b/csharp/echo/GlobularEchoServer/GlobularEchoServer.csproj
@@ -3,9 +3,18 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp5.0</TargetFramework>
+    <Title>Echo Server</Title>
+    <Language>CSharp</Language>
+    <Description>.Net gRPC echo server mostly used as starting point to create a new microservice.</Description>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <projectUrl>https://www.globular.io</projectUrl>
+    <Version>1.0.0</Version>
+    <Authors>Dave Courtois</Authors>
+    <Company>Globular</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-
   <ItemGroup>
+    <None Include="licenses\LICENSE.txt" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\GlobularServer\GlobularServer.csproj" />
