--- a/csharp/persistence/GlobularPersistenceClient/GlobularPersistenceClient.csproj
+++ b/csharp/persistence/GlobularPersistenceClient/GlobularPersistenceClient.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Title>Globular Client Side Load Balancer</Title>
+    <Title>Globular persistence client</Title>
     <Language>CSharp</Language>
-    <Description>Client side load balancer to be use to select the server's from canditate list...</Description>
+    <Description>Persistence client that give access to mongoDB via gRpc.</Description>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <projectUrl>https://www.globular.io</projectUrl>
-    <Version>1.0.0</Version>
+    <Version>1.0.4</Version>
     <Authors>Dave Courtois</Authors>
     <Company>Globular</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -22,5 +22,4 @@
     <PackageReference Include="Google.Protobuf" Version="3.14.0" />
     <PackageReference Include="Grpc" Version="2.34.0" />
   </ItemGroup>
-  
 </Project>
