--- a/csharp/rbac/GlobularRbacClient/GlobularRbacClient.csproj
+++ b/csharp/rbac/GlobularRbacClient/GlobularRbacClient.csproj
@@ -2,7 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Title>Globular Role Base Access Control client</Title>
+    <Language>CSharp</Language>
+    <Description>.Net gRPC base client code for globular clients</Description>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <projectUrl>https://www.globular.io</projectUrl>
+    <Version>1.0.0</Version>
+    <Authors>Dave Courtois</Authors>
+    <Company>Globular</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="licenses\LICENSE.txt" Pack="true" PackagePath="" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\GlobularClient\GlobularClient.csproj" />
   </ItemGroup>
