--- a/csharp/GlobularServer/GlobularServer.csproj
+++ b/csharp/GlobularServer/GlobularServer.csproj
@@ -20,7 +20,9 @@
     <PackageReference Include="Grpc" Version="2.34.0" />
     <PackageReference Include="Grpc.Core" Version="2.34.0" />
     <PackageReference Include="Grpc.Reflection" Version="2.34.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
+    <PackageReference Include="System.Security.Claims" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\resource\GlobularResourceClient\GlobularResourceClient.csproj" />
