--- a/csharp/resource/GlobularResourceClient/GlobularResourceClient.csproj
+++ b/csharp/resource/GlobularResourceClient/GlobularResourceClient.csproj
@@ -8,12 +8,14 @@
     <Description>.Net gRPC client for globular Resource service</Description>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <projectUrl>https://www.globular.io</projectUrl>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>Dave Courtois</Authors>
     <Company>Globular</Company>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-  
+    <ItemGroup>
+    <None Include="licenses\LICENSE.txt" Pack="true" PackagePath="" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\GlobularClient\GlobularClient.csproj" />
   </ItemGroup>
