--- a/csharp/echo/GlobularEchoServer/GlobularEchoServer.csproj
+++ b/csharp/echo/GlobularEchoServer/GlobularEchoServer.csproj
@@ -16,10 +16,11 @@
   <ItemGroup>
     <None Include="licenses\LICENSE.txt" Pack="true" PackagePath="" />
   </ItemGroup>
-  <ItemGroup>
+  <!--ItemGroup>
     <ProjectReference Include="..\..\GlobularServer\GlobularServer.csproj" />
-  </ItemGroup>
+  </ItemGroup-->
   <ItemGroup>
+    <PackageReference Include="GlobularServer" Version="1.0.1" />
     <PackageReference Include="Google.Protobuf" Version="3.14.0" />
     <PackageReference Include="Grpc" Version="2.34.0" />
     <PackageReference Include="Grpc.Core" Version="2.34.0" />
